    apport when reporting a crash). Add a test case, too. (LP: #129616)
  * debian/control, debian/rules: Switch from python-support to
    python-central, and use 'nomove' option so that apport works during
    upgrades, too. (LP: #121341)
  * debian/rules: Use dh_icons instead of dh_iconcache.
  * debian/apport.init: Do not stop apport in any runlevel (LSB header).

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Feb 2008 13:41:58 +0100

apport (0.101) hardy; urgency=low

  * debian/control: Add python-xdg dependency to apport, since apport-cli
    needs it. (LP: #177095)
  * apport/ui.py: Add test case for reporting a report which has been
    preprocessed by apport-retrace, i. e. has a stack trace, but no core dump
    any more (reproducing LP #185084).
  * apport/ui.py, run_crash(): Do not reject reports which have a stack trace,
    but no core dump. (LP: #185084)
  * apport/report.py: Fix test_add_gdb_info_load() test case, the temporary
    executable was already deleted when gdb ran the second time.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 23 Jan 2008 17:48:06 +0000

apport (0.100) hardy; urgency=low

  * bin/crash-digger: Add option --log for logging to a file, and
    --pidfile/--stop for daemonization. Add test cases to test-crash-digger.
  * bin/apport: Do not re-raise exceptions about failure to create the lock
    file, to avoid crashing in the case that another apport instance tries to
    lock at exactly the same moment. (LP: #147237)
  * apport/report.py testsuite: Check that our methods get along with binary
    data which turn into CompressedValue objects after loading them from a
    file. This reproduces LP #148305.
  * problem_report.py, CompressedValue: Add method splitlines() since we need
    it very often. Add test case to test_compressed_values(). (LP: #148305)
  * problem_report.py: Add test case to check that update() works and does the
    right thing with binary values and overwriting. This confirms that