@@ -179,15 +179,12 @@ free memory to automatically analyze the problem and send a report to the develo
             # we want to file a bug now
             try:
                 self.collect_info()
-            except IOError, e:
+            except (IOError, zlib.error):
                 # can happen with broken core dumps
-                if 'CRC check' in e.message:
-                    self.report = None
-                    self.ui_error_message(_('Invalid problem report'),
-                        _('This problem report is damaged and cannot be processed.'))
-                    return
-                else:
-                    raise
+                self.report = None
+                self.ui_error_message(_('Invalid problem report'),
+                    _('This problem report is damaged and cannot be processed.'))
+                return False
 
             # check unreportable flag
             if self.report.has_key('UnreportableReason'):
